$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.136 2005/05/11 08:05:10 ph10 Exp $

Change log file for Exim from version 4.21
-------------------------------------------


Exim version 4.52
-----------------

TF/01 Added support for Client SMTP Authorization. See NewStuff for details.

PH/01 When a transport filter timed out in a pipe delivery, and the pipe
      command itself ended in error, the underlying message about the transport
      filter timeout was being overwritten with the pipe command error. Now the
      underlying error message should be appended to the second error message.

TK/01 Fix poll() being unavailable on Mac OSX 10.2.


Exim version 4.51
-----------------

TK/01 Added Yahoo DomainKeys support via libdomainkeys. See
      doc/experimental-spec.txt for details. (http://domainkeys.sf.net)

TK/02 Fix ACL "control" statement not being available in MIME ACL.

TK/03 Fix ACL "regex" condition not being available in MIME ACL.

PH/01 Installed a patch from the Sieve maintainer that allows -bf to be used
      to test Sieve filters that use "vacation".

PH/02 Installed a slightly modified version of Nikos Mavrogiannopoulos' patch
      that changes the way the GnuTLS parameters are stored in the cache file.
      The new format can be generated externally. For backward compatibility,
      if the data in the cache doesn't make sense, Exim assumes it has read an
      old-format file, and it generates new data and writes a new file. This
      means that you can't go back to an older release without removing the
      file.

PH/03 A redirect router that has both "unseen" and "one_time" set does not
      work if there are any delivery delays because "one_time" forces the
      parent to be marked "delivered", so its unseen clone is never tried
      again. For this reason, Exim now forbids the simultaneous setting of
      these two options.

PH/04 Change 4.11/85 fixed an obscure bug concerned with addresses that are