@@ -1,4 +1,4 @@
-# $Cambridge: exim/src/src/transports/Makefile,v 1.1 2004/10/07 13:10:02 ph10 Exp $
+# $Cambridge: exim/src/src/transports/Makefile,v 1.2 2005/05/17 09:53:35 ph10 Exp $
 
 # Make file for building a library containing all the available transports and
 # calling it transports.a. This is called from the main make file, after cd'ing
@@ -7,13 +7,15 @@
 OBJ = appendfile.o autoreply.o lmtp.o pipe.o smtp.o tf_maildir.o
 
 transports.a:    $(OBJ)
-		 /bin/rm -f transports.a
-		 $(AR) transports.a $(OBJ)
+		 @/bin/rm -f transports.a
+		 @echo "$(AR) transports.a"
+		 @$(AR) transports.a $(OBJ)
 		 $(RANLIB) $@
-		 /bin/rm -rf ../drtables.o
+		 @/bin/rm -rf ../drtables.o
 
 .SUFFIXES:       .o .c
-.c.o:;           $(CC) -c $(CFLAGS) $(INCLUDE) $*.c
+.c.o:;           @echo "$(CC) $*.c"
+		 $(FE)$(CC) -c $(CFLAGS) $(INCLUDE) $*.c
 
 appendfile.o:    $(HDRS) appendfile.c appendfile.h tf_maildir.h
 autoreply.o:     $(HDRS) autoreply.c autoreply.h
